--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "electron-ts-react-template",
     "version": "1.0.0",
     "description": "electron-ts-react-template",
-    "main": "./.webpack/main/index.js",
+    "main": ".webpack/main",
     "scripts": {
         "start": "electron-forge start",
         "package": "electron-forge package",
@@ -10,91 +10,50 @@
         "release": "electron-forge publish"
     },
     "dependencies": {
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
-        "react-hot-loader": "4.13.0"
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hot-loader": "4.13.1"
     },
     "devDependencies": {
-        "@babel/core": "7.14.6",
-        "@babel/plugin-transform-runtime": "7.14.5",
-        "@babel/preset-env": "7.14.5",
-        "@babel/preset-react": "7.14.5",
-        "@babel/preset-typescript": "7.14.5",
-        "@electron-forge/cli": "6.0.0-beta.57",
-        "@electron-forge/maker-deb": "6.0.0-beta.57",
-        "@electron-forge/maker-rpm": "6.0.0-beta.57",
-        "@electron-forge/maker-squirrel": "6.0.0-beta.57",
-        "@electron-forge/maker-zip": "6.0.0-beta.57",
-        "@electron-forge/plugin-webpack": "6.0.0-beta.57",
+        "@babel/core": "7.20.7",
+        "@babel/plugin-transform-runtime": "7.19.6",
+        "@babel/preset-env": "7.20.2",
+        "@babel/preset-react": "7.18.6",
+        "@babel/preset-typescript": "7.18.6",
+        "@electron-forge/cli": "6.0.4",
+        "@electron-forge/maker-deb": "6.0.4",
+        "@electron-forge/maker-rpm": "6.0.4",
+        "@electron-forge/maker-squirrel": "6.0.4",
+        "@electron-forge/maker-zip": "6.0.4",
+        "@electron-forge/plugin-webpack": "6.0.4",
         "@marshallofsound/webpack-asset-relocator-loader": "0.5.0",
-        "@testing-library/jest-dom": "5.14.1",
-        "@testing-library/react": "11.2.7",
-        "@types/electron-devtools-installer": "2.2.0",
-        "@types/react": "17.0.11",
-        "@types/react-dom": "17.0.8",
+        "@testing-library/jest-dom": "5.16.5",
+        "@testing-library/react": "13.4.0",
+        "@types/electron-devtools-installer": "2.2.2",
+        "@types/node": "^18.11.18",
+        "@types/react": "18.0.26",
+        "@types/react-dom": "18.0.10",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
-        "babel-loader": "8.2.2",
+        "babel-loader": "9.1.0",
         "cross-env": "7.0.3",
-        "electron": "13.1.2",
-        "eslint": "7.29.0",
-        "eslint-plugin-import": "2.23.4",
+        "css-loader": "^6.7.3",
+        "electron": "22.0.0",
+        "eslint": "8.31.0",
+        "eslint-plugin-import": "2.26.0",
         "eslint-plugin-node": "11.1.0",
-        "eslint-plugin-react": "7.24.0",
+        "eslint-plugin-react": "7.31.11",
+        "file-loader": "^6.2.0",
         "npm-run-all": "4.1.5",
-        "typescript": "4.3.4",
-        "wait-on": "5.3.0"
+        "sass": "^1.57.1",
+        "sass-loader": "^13.2.0",
+        "style-loader": "^3.3.1",
+        "typescript": "4.9.4",
+        "url-loader": "^4.1.1",
+        "wait-on": "7.0.1",
+        "webpack": "^5.75.0"
     },
     "config": {
-        "forge": {
-            "packagerConfig": {
-                "name": "Electron starter",
-                "executableName": "electron-starter",
-                "icon": "assets/icon",
-                "extraResource": [
-                    "assets"
-                ]
-            },
-            "plugins": [
-                [
-                    "@electron-forge/plugin-webpack",
-                    {
-                        "mainConfig": "./webpack/main.webpack.js",
-                        "renderer": {
-                            "config": "./webpack/renderer.webpack.js",
-                            "entryPoints": [
-                                {
-                                    "html": "./public/index.html",
-                                    "js": "./src/index.tsx",
-                                    "name": "main_window"
-                                }
-                            ]
-                        }
-                    }
-                ]
-            ],
-            "makers": [
-                {
-                    "name": "@electron-forge/maker-squirrel",
-                    "config": {
-                        "name": "Electron Starter"
-                    }
-                },
-                {
-                    "name": "@electron-forge/maker-zip",
-                    "platforms": [
-                        "darwin"
-                    ]
-                },
-                {
-                    "name": "@electron-forge/maker-deb",
-                    "config": {}
-                },
-                {
-                    "name": "@electron-forge/maker-rpm",
-                    "config": {}
-                }
-            ]
-        }
+        "forge": "forge.config.js"
     }
 }
