--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,15 @@
       "dom",
       "es2015",
       "es2016",
-      "es2017"
+      "es2017", "DOM.Iterable"
     ],
     "allowJs": true,
     "jsx": "react-jsx",
     "sourceMap": true,
     "outDir": "./dist",
-    "strict": true ,
+    "strict": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "typeRoots": ["./node_modules/@types"],
   }
 }
